rendered/envs/friclu/windmill/service-windmill-extra.yaml
apiVersion: v1
kind: Service
metadata:
  name: windmill-extra
  namespace: windmill
spec:
  ports:
    - name: lsp
      port: 3001
      protocol: TCP
      targetPort: 3001
    - name: multiplayer
      port: 3002
      protocol: TCP
      targetPort: 3002
    - name: debugger
      port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app.kubernetes.io/name: windmill-extra
  sessionAffinity: ClientIP
  type: ClusterIP
