rendered/envs/friclu/windmill/ingress-windmill.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windmill
  namespace: windmill
spec:
  ingressClassName: nginx
  rules:
    - host: windmill.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: windmill-extra
                port:
                  number: 3001
            path: /ws/
            pathType: Prefix
          - backend:
              service:
                name: windmill-extra
                port:
                  number: 3003
            path: /ws_debug/
            pathType: Prefix
    - host: windmill.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: windmill-app
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - windmill.duchardt.net
      secretName: windmill-certificate
